Bug #28749 MaxNoOfOpenFiles offset by 1
Submitted: 29 May 2007 17:31 Modified: 11 Jun 2007 22:34
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version: OS:Any
Assigned to: Tomas Ulin Target Version:

[29 May 2007 17:31] Tomas Ulin
Description:
MaxNoOfOpenFiles = 40

actually means 39 max open files...

setting InitialNoOpenFiles = 40 will then cause an error...

as a workaround make sure to set InitialNoOpenFiles atleast 1 smaller than
MaxNoOfOpenFiles

How to repeat:
.

Suggested fix:
make sure MaxNoOpenFiles actually is what it is set to...
[29 May 2007 17:35] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/27594

ChangeSet@1.2538, 2007-05-29 17:55:12+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #28749  	MaxNoOfOpenFiles offset by 1
[30 May 2007 8:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/27634

ChangeSet@1.2507, 2007-05-30 09:00:50+02:00, tomas@whalegate.ndb.mysql.com +1 -0
  Bug #28749    MaxNoOfOpenFiles offset by 1
[11 Jun 2007 13:39] Bugs System
Pushed into 5.1.20-beta
[11 Jun 2007 13:42] Bugs System
Pushed into 5.0.44
[11 Jun 2007 22:34] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfic in 5.0.44, 5.1.20, and telco-6.1.10 changelogs.
[3 Jul 2007 8:44] Jon Stephens
Also documented for telco-6.2.3 release.