Bug #28749  	MaxNoOfOpenFiles offset by 1