storage/ndb/src/kernel/blocks/ndbfs/Ndbfs.cpp
@@ -650,7 +650,7 @@ AsyncFile*
 Ndbfs::createAsyncFile(){
 
   // Check limit of open files
-  if (theFiles.size()+1 ==  m_maxFiles) {
+  if (theFiles.size() == m_maxFiles) {
     // Print info about all open files
     for (unsigned i = 0; i < theFiles.size(); i++){
       AsyncFile* file = theFiles[i];
